ViTables ChangeLog
==================
** December 09, 2009 **
Fixed a bug in the context menu of the logger.

Fixed a couple of minor bugs.

** December 05, 2009 **
The documentation browser subpackage has been simplified.

Several question like message boxes have been customised.

** December 04, 2009 **
Removed wild imports and other minor annoyances common to most modules.

The time series plugin has been refactored.

pluginsManager module has been refactored to improve some bizarre behavior.

Usability of csv_import plugin has been improved with better dialog texts.

** December 03, 2009 **
Autodetection of tables headers has been added to the import csv plugin.

** December 02, 2009 **
Support for tables headers has been added to the import/export csv plugins.

** November 30, 2009 **
The import_csv.py plugin has been debugged, refactored and enhanced.

** November 28, 2009 **
New version of import_csv.py plugin added to repository.

** November 25, 2009 **
Minor problems introduced in recent changes have been fixed.

** November 24, 2009 **
Import capabilities added to the CSV plugin.

vtapp.py module changed to make easier interaction with plugins.

** November 23, 2009 **
Layout of csv plugin changed to allow future additions; modules, icons,...

Plugin export_csv.py enhanced: better code, reduced memory footprint.

** November 22, 2009 **
Memory footprint greatly reduced.

** November 20, 2009 **
Fixed a bug in the datasheet.py module apparent with pyqt < 4.6.

** November 13, 2009 **
Support for queries has been updated.

dataSheet.py module has been refactored. 

leafView.py module has been refactored.

Plugins have been updated.

Querying functionality has been moved from vtapp.py to queriesManager.py.

dataSheet.py module has been refactored. Circular references have been removed.

Fixed a bug in the Preferences dialog.

** November 10, 2009 **
Fixed a bug in the Preferences dialog.

** November 08, 2009 **